# datamesh

./: .env.example  .gitignore  ADVANCED_CACHING_SYSTEM_IMPLEMENTATION.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  CODEBASE_ANALYSIS.md  CONCURRENT_CHUNKS_IMPLEMENTATION.md  CURRENT_IMPLEMENTATION_STATUS.md  Cargo.toml  DOCUMENTATION_CLEANUP_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.md  IMPLEMENTATION_IMPROVEMENTS.md  IMPROVEMENTS.md  MODULES.md  README.md  STARTUP_GUIDE.md  TESTING_GUIDE.md  TRANSPORT_SECURITY_IMPROVEMENTS.md  cleanup_project.sh  cluster_test_final.sh  comprehensive_cluster_test.sh  connect_to_bootstrap.sh  datamesh.toml  debug_startup  debug_startup.rs  final_cluster_test.sh  generate_shell_completion.py  improved_cluster_test.sh  manual_cluster_test.sh  peers_diag.txt  simple_4_node_test.sh  simple_cluster_test.sh  simple_cluster_validation.sh  stats_diag.txt  storage_diag.txt  test_api_integration.sh  test_cluster_6nodes.sh  test_diag.txt  test_improved_cluster.sh  test_improvements.sh  (+5 more)
.github/workflows/: comprehensive-tests.yml
backup/docs_cleanup_20250713_0238/: COMPREHENSIVE_ANALYSIS_2025.md
backup_docs/: CLEANUP_SUMMARY.md  CURRENT_IMPLEMENTATION_STATUS.md  DOCUMENTATION_CLEANUP_PLAN.md  README.md  SECURITY_CHECKLIST.md
backup_docs/docs/: API.md  README.md  REFACTORING_PROPOSAL.md  cli_ux_improvements.md  vps_requirements.md
backup_tests/: test_dht_diagnostic.sh
backup_tests/archived/: test_config.toml  working_cluster_test.sh
benches/: crypto_benchmarks.rs  network_benchmarks.rs  storage_benchmarks.rs
cluster_test_20250709_195817/: pids.txt
cluster_test_20250709_195817/data/: config_4.toml  large_text_3.txt  small_text_1.txt
cluster_test_20250709_195817/results/: test_log.txt
cluster_test_20250709_201220/: pids.txt
cluster_test_20250709_201220/data/: config_4.toml  large_text_3.txt  small_text_1.txt
cluster_test_20250709_201220/results/: test_log.txt
cluster_test_20250711_145335/configs/: node_0.toml
cluster_test_20250711_145402/configs/: node_0.toml
cluster_test_20250711_194404/configs/: node_0.toml
cluster_test_20250711_195820/configs/: node_0.toml
cluster_test_20250712_004514/configs/: node_0.toml
cluster_test_20250712_004559/configs/: node_0.toml
cluster_test_20250712_005132/: test_config.toml
cluster_test_20250712_005946/: test_config.toml
cluster_test_20250712_012044/configs/: node_0.toml
completions/: INSTALL.md  _datamesh  datamesh.bash  datamesh.fish
docs/: ADMIN.md  API.md  ARCHITECTURE.md  ENHANCED_REED_SOLOMON.md  GOVERNANCE.md  IMPLEMENTATION_GAPS_ANALYSIS.md  IMPLEMENTATION_STATUS.md  MODULES.md  README.md  ROADMAP.md  SEARCH.md  STORAGE_ECONOMY.md  STORAGE_ECONOMY_QUICK_REFERENCE.md  USAGE.md  key_management_hardening_roadmap.md  proposed_improvements_roadmap.md  ux_analysis_and_improvements.md
examples/: README.md  advanced_cluster_test.sh  backup.sh  cluster_manager.sh  cluster_test.sh  comprehensive_cluster_test.sh  debug_retrieval_test.sh  fixed_cluster_test.sh  governance_integration.rs  improved_cluster_test.sh  interactive_dashboard_functions.sh  perfect_cluster_test.sh  quick_cluster_test.sh  restore.sh  simple_test.sh  start_bootstrap.sh  start_node.sh  storage_economy_demo.sh  test_modules.rs  validate_enhanced_reed_solomon.rs
examples/archived/: cluster_test_working.sh  enhanced_multi_node_test.sh  multi_node_test.sh  simple_storage_test.sh
scripts/: secure-deploy.sh  verify_build.sh
src/: actor_file_storage.rs  actor_main.rs  advanced_commands.rs  api_server.rs  audit_logger.rs  backup_system.rs  batch_operations.rs  billing_system.rs  bootstrap_admin.rs  bootstrap_manager.rs  cli.rs  cli_improvements.rs  concurrent_chunks.rs  config.rs  database.rs  datamesh_core.rs  dynamic_pricing.rs  economics.rs  encrypted_key_manager.rs  enhanced_api.rs  error.rs  error_handling.rs  failover.rs  file_manager.rs  file_storage.rs  flexible_storage.rs  gamification.rs  governance.rs  governance_service.rs  health_manager.rs  high_performance.rs  intelligent_cli.rs  interactive.rs  key_manager.rs  key_rotation.rs  lib.rs  load_balancer.rs  logging.rs  main.rs  network.rs  (+20 more)
src/commands/: actor_commands.rs  actor_file_commands.rs  admin_commands.rs  advanced_commands.rs  economy_command.rs  file_commands.rs  missing_commands.rs  mod.rs  network_commands.rs  service_commands.rs
src/monitoring/: alerts.rs  analytics.rs  dashboard.rs  metrics.rs  mod.rs  time_series.rs
test-framework/: API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  EXAMPLES.md  GETTING_STARTED.md  README.md
test-framework/scripts/: run-tests.sh
test-framework/src/: cli_tests.rs  lib.rs  orchestrator.rs  ui_tests.rs
tests/: api_integration_tests.rs  api_websocket_integration.rs  comprehensive_cluster_tests.rs  comprehensive_unit_tests.rs  economy_api_tests.rs  enhanced_actor_system_tests.rs  enhanced_concurrency_tests.rs  enhanced_error_resilience_tests.rs  enhanced_integration_tests.rs  enhanced_integration_tests_new.rs  enhanced_network_tests.rs  enhanced_property_tests.rs  enhanced_reed_solomon_tests.rs  enhanced_resilience_tests.rs  enhanced_storage_tests.rs  enhanced_unit_tests.rs  enhanced_unit_tests_final.rs  enhanced_unit_tests_fixed.rs  enhanced_unit_tests_new.rs  governance_workflows.rs  integration_economy_e2e.rs  integration_tests.rs  missing_module_tests.rs  property_based_tests.rs  run_all_tests.sh  run_enhanced_tests.sh  security_integration.rs  storage_economy_test_suite.sh  test_utils.rs  test_utils_new.rs  unit_tests.rs
web-interface/: .eslintrc.js  .gitignore  README.md  index.html  package.json  vite.config.js  vitest.config.js
web-interface/public/: manifest.json
web-interface/src/: App.vue  main.js  sw.js
web-interface/src/composables/: useAccessibility.js  useCache.js  useErrorBoundary.js  useIntelligentDashboard.js  useMobileOptimization.js  useWebSocket.js
web-interface/src/i18n/: index.js
web-interface/tests/: setup.js
web-ui/: README.md  index.html  package.json  tailwind.config.js  vite.config.ts
web-ui/src/: App.tsx  main.tsx
web-ui/tests/: setup.ts
(+115 files in other folders)
