[package]
name = "datamesh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datamesh"
path = "src/main.rs"

[dependencies]
libp2p = { version = "0.56.0", features = ["kad", "noise", "tcp", "yamux", "macros", "tokio"] }
tokio = { version = "1.46.0", features = ["full"] }
futures = "0.3.31"
anyhow = "1.0.98"
tokio-util = { version = "0.7.15", features = ["codec"] }
futures-util = "0.3.31"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.8"
ecies = { version = "0.2.9", default-features = false, features = ["pure"] }
reed-solomon-erasure = "6.0.0"
clap = { version = "4.5.40", features = ["derive"] }
blake3 = "1.8.2"
hex = "0.4.3"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
rusqlite = { version = "0.31.0", features = ["bundled"] }
indicatif = "0.17.8"
colored = "2.1.0"
glob = "0.3.1"
regex = "1.10.2"
notify = "6.1.1"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
