[package]
name = "datamesh"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "datamesh"
path = "src/main.rs"

[lib]
name = "datamesh"
path = "src/lib.rs"

[dependencies]
libp2p = { version = "0.56.0", features = ["kad", "noise", "tcp", "yamux", "macros", "tokio"] }
tokio = { version = "1.46.0", features = ["full"] }
futures = "0.3.31"
anyhow = "1.0.98"
tokio-util = { version = "0.7.15", features = ["codec"] }
futures-util = "0.3.31"
env_logger = "0.11.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rand = "0.8"
ecies = { version = "0.2.9", default-features = false, features = ["pure"] }
reed-solomon-erasure = "6.0.0"
clap = { version = "4.5.40", features = ["derive"] }
clap_complete = "4.5"
blake3 = "1.8.2"
hex = "0.4.3"
chrono = { version = "0.4.41", features = ["serde"] }
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
toml = "0.8"
rusqlite = { version = "0.31.0", features = ["bundled"] }
indicatif = "0.17.8"
colored = "2.1.0"
glob = "0.3.1"
regex = "1.10.2"
notify = "6.1.1"
tar = "0.4"
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
sled = "0.34"
lru = "0.12"
bs58 = "0.5"

# REST API dependencies
axum = { version = "0.7", features = ["multipart", "ws"] }
axum-server = { version = "0.5", features = ["tls-rustls"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors", "trace"] }
hyper = "1.0"
axum-macros = "0.4"
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }
serde_yaml = "0.9"
mime = "0.3"
multer = "3.0"
bytes = "1.5"
warp = "0.3"

# Security enhancements
argon2 = "0.5"
aes-gcm = "0.10"
bincode = "1.3"
rpassword = "7.3"
libc = "0.2"
hostname = "0.3"
fastrand = "2.3.0"
async-trait = "0.1"
jsonwebtoken = "9.3"
md5 = "0.8.0"

[dev-dependencies]
tempfile = "3.0"
tokio-test = "0.4"
criterion = "0.5"
proptest = "1.0"
mockall = "0.12"
wiremock = "0.6"
tracing-test = "0.2"
sha256 = "1.5"
mime_guess = "2.0"

# Benches
[[bench]]
name = "crypto_benchmarks"
harness = false

[[bench]]
name = "network_benchmarks"
harness = false

[[bench]]
name = "storage_benchmarks"
harness = false

[features]
default = []
benchmarks = []
integration-tests = []
